Project1/force-app/main/default/objects/Transaction__c/fields/Bread_Type__c.field-meta.xml
<CustomField>
    <fullName>Bread_Type__c</fullName>
    <label>Bread Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baguette</fullName>
            </value>
            <value>
                <fullName>Brioche</fullName>
            </value>
            <value>
                <fullName>Rye</fullName>
            </value>
            <value>
                <fullName>Sourdough</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>