Project1/force-app/main/default/objects/Transaction__c/fields/Drink__c.field-meta.xml
<CustomField>
    <fullName>Drink__c</fullName>
    <label>Drink</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Drink_Included__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Coke Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>