Project1/force-app/main/default/objects/Transaction__c/fields/Drink_Included__c.field-meta.xml
<CustomField>
    <fullName>Drink_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drink Included</label>
    <type>Checkbox</type>
</CustomField>