Project1/force-app/main/default/objects/Transaction__c/fields/Meat_Type__c.field-meta.xml
<CustomField>
    <fullName>Meat_Type__c</fullName>
    <label>Meat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Steak</fullName>
            </value>
            <value>
                <fullName>Turkey</fullName>
            </value>
            <value>
                <fullName>Ham</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>