Project1/force-app/main/default/objects/Transaction__c/fields/Utensils_Included__c.field-meta.xml
<CustomField>
    <fullName>Utensils_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utensils Included</label>
    <type>Checkbox</type>
</CustomField>