Project1/force-app/main/default/objects/Transaction__c/validationRules/Drink_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Drink_Selected</fullName>
    <active>true</active>
    <description>The a drink has been included in the transaction but not selected</description>
    <errorConditionFormula>Drink_Included__c  = True &amp;&amp; ISPICKVAL(Drink__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Drink__c</errorDisplayField>
    <errorMessage>A drink has been requested to be included in the transaction but a drink choice has not been included, please choose a drink value</errorMessage>
</ValidationRule>